New (0.0.2) version changes
1. Better permalink extraction
2. Got rid of noty div's for every successful save
3. Added inline responses
4. Minor CSS changes
5. Made changes so as to add Save to Pocket link to almost every feed
item on Quora

--- a/css/inject.css
+++ b/css/inject.css
@@ -1,11 +1,30 @@
-/**
- * Place your custom CSS styles here.
- **/
-
 div.noty_message {
 	text-align: center !important;
 }
 
 div.noty_message a {
 	color: #fff !important;
+}
+
+a.savedToPocket{
+	font-style: italic;
+}
+
+@keyframes nodeInserted{
+	from { opacity: 0.99;}
+	to { opacity: 1;}
+}
+
+@-webkit-keyframes nodeInserted{
+	from { opacity: 0.99;}
+	to { opacity: 1;}
+}
+
+div.pagedlist_item {
+
+	animation-duration: 0.001s;
+	-webkit-animation-duration: 0.001s;
+
+	animation-name: nodeInserted;
+	-webkit-animation-name: nodeInserted;
 }
